# Alpacco

./: .gitmodules  CMakeLists.txt  README.md  TODOLIST.txt
src/: main.cpp
src/services/: utils.hpp
src/services/commands_callbacks/: commands_callbacks.cpp  commands_callbacks.hpp
src/services/configParser/: configParser.cpp  configParser.hpp
src/services/hotreload/: hotreload.cpp  hotreload.hpp
src/services/initProject/: init.cpp  init.hpp
src/services/pipInterlayer/: pipInterlayer.cpp  pipInterlayer.hpp
